modified:   src/FireQube/masters/AccessLevelManage.jsx 	modified:   src/FireQube/masters/CheckerInboxCx.jsx 	modified:   src/FireQube/masters/CheckerOutboxCx.jsx 	modified:   src/FireQube/widgets/EditPageLayout.js 	modified:   src/FireQube/widgets/ListPageLayout.js 	modified:   src/FireQube/widgets/TopbarNav.jsx 	modified:   src/shared/styles/dx-styles.css

--- a/src/shared/styles/dx-styles.css
+++ b/src/shared/styles/dx-styles.css
@@ -91,3 +91,8 @@ body
     font-size: 9.5pt;
 }
 
+
+.select-box-text {
+    padding-top: 18px; /* Adjust the value as needed */
+    margin-left: 8px;
+  }
