modified:   src/App.js 	modified:   src/FFS/masters/PartyMaster/PartyAddressEdit.js 	modified:   src/FFS/masters/PartyMaster/PartyCommunication.js 	modified:   src/FFS/masters/PartyMaster/PartyContact.js 	modified:   src/FFS/masters/PartyMaster/PartyMaster.js 	modified:   src/FFS/masters/PartyMaster/RebateParty.js 	new file:   src/FFS/transactions/Booking/Booking.js 	new file:   src/FFS/transactions/Booking/BookingList.js 	new file:   src/FFS/transactions/Booking/BookingSummary.js 	new file:   src/FFS/transactions/Booking/GeneralInformationTab.js 	new file:   src/FFS/transactions/Booking/LineDetailsTab.js 	new file:   src/FFS/transactions/Booking/SelectBoxDropdown.js 	modified:   src/FireQube/auth/Login.jsx 	modified:   src/FireQube/masters/AccessLevelManage.jsx 	modified:   src/FireQube/masters/CheckerInboxCx.jsx 	modified:   src/FireQube/masters/CheckerOutboxCx.jsx 	modified:   src/FireQube/widgets/AccountPopover.js 	modified:   src/FireQube/widgets/EditPageLayout.js 	modified:   src/FireQube/widgets/ListPageLayout.js 	modified:   src/FireQube/widgets/MultiLevelList.js 	modified:   src/FireQube/widgets/TopbarNav.jsx 	new file:   src/FireQube/widgets/TransactionListPageLayout.js 	modified:   src/shared/styles/dx-styles.css

--- a/src/shared/styles/dx-styles.css
+++ b/src/shared/styles/dx-styles.css
@@ -96,3 +96,8 @@ body
     padding-top: 18px; /* Adjust the value as needed */
     margin-left: 8px;
   }
+
+.dx-datagrid .dx-column-lines > td {
+    border-left: 1px solid #efeeeb;
+    border-right: 1px solid #efeeeb;
+}
