Booking module updation 	modified:   src/App.js 	modified:   src/FFS/masters/PartyMaster/PartyMaster.js 	modified:   src/FFS/transactions/Booking/Booking.js 	modified:   src/FFS/transactions/Booking/BookingList.js 	modified:   src/FFS/transactions/Booking/BookingSummary.js 	modified:   src/FFS/transactions/Booking/GeneralInformationTab.js 	modified:   src/FFS/transactions/Booking/LineDetailsTab.js 	modified:   src/FFS/transactions/Booking/MultivalSelectbox.js 	modified:   src/FFS/transactions/Booking/SelectBoxDropdown.js 	modified:   src/FireQube/auth/Login.jsx 	modified:   src/FireQube/widgets/ListPageLayout.js 	modified:   src/FireQube/widgets/TransactionListPageLayout.js 	modified:   src/shared/styles/dx-styles.css

--- a/src/shared/styles/dx-styles.css
+++ b/src/shared/styles/dx-styles.css
@@ -97,7 +97,17 @@ body
     margin-left: 8px;
   }
 
+.select-dyna-box-text{
+    padding-top: 18px; /* Adjust the value as needed */
+    margin-left: 8px;
+    background-color: cadetblue;
+}  
+
 .dx-datagrid .dx-column-lines > td {
     border-left: 1px solid #efeeeb;
     border-right: 1px solid #efeeeb;
+}
+
+.dx-texteditor-input,.dx-texteditor-with-floating-label,.dx-editor-underlined {
+    padding-top: 14px;
 }
