- Booking rendering issue - Booking date range (Partial) - Inclusion of environment variables - Prod/Dev indication on Topbar - GetFormattedDate function for date filters 	deleted:    .env 	new file:   .env.development 	new file:   .env.production 	modified:   src/App.js 	modified:   src/FFS/transactions/Booking/Booking.js 	modified:   src/FFS/transactions/Booking/BookingList.js 	modified:   src/FFS/transactions/Booking/BookingSummary.js 	modified:   src/FFS/transactions/Booking/GeneralInformationTab.js 	modified:   src/FFS/transactions/Booking/LineDetailsTab.js 	modified:   src/FFS/transactions/Booking/SelectBoxDropdown.js 	modified:   src/FireQube/auth/Login.jsx 	modified:   src/FireQube/widgets/ListPageLayout.js 	modified:   src/FireQube/widgets/MultiLevelList.js 	modified:   src/FireQube/widgets/TopbarNav.jsx 	modified:   src/FireQube/widgets/TransactionListPageLayout.js 	modified:   src/index.js 	modified:   src/shared/scripts/common.js 	modified:   src/shared/styles/dx-styles.css

--- a/src/shared/styles/dx-styles.css
+++ b/src/shared/styles/dx-styles.css
@@ -111,3 +111,13 @@ body
 .dx-texteditor-input,.dx-texteditor-with-floating-label,.dx-editor-underlined {
     padding-top: 14px;
 }
+
+.blink {
+    animation: blinker 3s linear infinite;
+}
+  
+@keyframes blinker {
+50% {
+    opacity: 0;
+}
+}
