- App Switcher - Booking Vessel Voyage based ETA - All grid double click edit selection
 Changes to be committed:
	modified:   src/App.js
	modified:   src/FFS/transactions/Booking/Booking.js
	modified:   src/FFS/transactions/Booking/GeneralInformationTab.js
	modified:   src/FFS/transactions/Booking/LineDetailsTab.js
	modified:   src/FireQube/auth/Login.jsx
	modified:   src/FireQube/widgets/ApplicationMenuPopover.js
	modified:   src/FireQube/widgets/ListPageLayout.js
	modified:   src/FireQube/widgets/MultiLevelList.js
	modified:   src/FireQube/widgets/TopbarNav.jsx
	modified:   src/FireQube/widgets/TransactionListPageLayout.js
	modified:   src/FireQube/widgets/sideBarNav.js
	modified:   src/shared/scripts/common.js
	modified:   src/shared/styles/index.css

--- a/src/shared/styles/index.css
+++ b/src/shared/styles/index.css
@@ -15,7 +15,7 @@ code {
 
 
 *::-webkit-scrollbar {
-  width: 4px;               /* width of the entire scrollbar */
+  width: 6px;               /* width of the entire scrollbar */
 }
 
 *::-webkit-scrollbar-track {
@@ -23,7 +23,7 @@ code {
 }
 
 *::-webkit-scrollbar-thumb {
-  background-color: orange;    /* color of the scroll thumb */
+  background-color: rgb(9, 3, 72);    /* color of the scroll thumb */
   border-radius: 20px;       /* roundness of the scroll thumb */
-  border: 3px solid rgb(250, 209, 132);  /* creates padding around scroll thumb */
+  border-left: 15px solid rgba(243, 229, 203, 0.642);  /* creates padding around scroll thumb rgb(250, 209, 132) */
 }
