Key Changes - Booking refinements, date format, date +5.30hrs, ETA date - Message alerts in Dialogbox - Application switcher related changes
	modified:   .env.development
	modified:   src/App.js
	modified:   src/FFS/masters/PartyMaster/PartyMaster.js
	modified:   src/FFS/transactions/Booking/Booking.js
	modified:   src/FFS/transactions/Booking/BookingList.js
	modified:   src/FFS/transactions/Booking/GeneralInformationTab.js
	modified:   src/FFS/transactions/Booking/LineDetailsTab.js
	modified:   src/FFS/transactions/Booking/SelectBoxDropdown.js
	modified:   src/FFS/transactions/Booking/VvpcsSBRender.js
	modified:   src/FireQube/widgets/ApplicationMenuPopover.js
	modified:   src/FireQube/widgets/EditPageLayout.js
	modified:   src/FireQube/widgets/ListPageLayout.js
	modified:   src/FireQube/widgets/TopbarNav.jsx
	modified:   src/FireQube/widgets/TransactionListPageLayout.js
	modified:   src/shared/styles/App.css

--- a/src/shared/styles/App.css
+++ b/src/shared/styles/App.css
@@ -43,3 +43,11 @@
 }
 
 
+.AppBackgroundCanvas{
+  overflow:'hidden';
+  scrollbar-width: none;
+}
+
+.AppSwitcher  {
+  background-color: rgba(13, 8, 1, 0.263);
+}
