--- a/src/shared/styles/dx-styles.css
+++ b/src/shared/styles/dx-styles.css
@@ -125,3 +125,23 @@ body
 .dx-overlay-shader{
     background-color: rgb(25,25,25,0.8);
 }
+
+/* .ms-datagrid for margin summary datagrid */
+.ms-datagrid .dx-datagrid , .ms-datagrid  .dx-texteditor{
+    font-size: 7.5pt;
+}
+
+.ms-datagrid .dx-datagrid .dx-row > td , .ms-datagrid  .dx-datagrid-rowsview .dx-texteditor-input{
+    /* padding: 1px; */
+    padding:1px 4px 1px 4px;
+    min-height: 4px;
+}
+
+.datagrid .dx-datagrid , .datagrid .dx-texteditor{
+    font-size: 8.5pt;
+}
+
+.datagrid .dx-datagrid .dx-row > td , .datagrid  .dx-datagrid-rowsview .dx-texteditor-input{
+    padding: 3px;
+    min-height: 6px;
+}
