Masters for Charge, Applicable Charge & Tariff
 Please enter the commit message for your changes. Lines starting
 with '#' will be ignored, and an empty message aborts the commit.

 On branch master
 Your branch is up to date with 'origin/master'.

 Changes to be committed:
	modified:   src/App.js
	modified:   src/FireQube/masters/MasterListPageCx.jsx
	modified:   src/shared/scripts/common.js
	modified:   src/shared/styles/dx-styles.css
	new file:   tviofw src 12072023.zip

--- a/src/shared/styles/dx-styles.css
+++ b/src/shared/styles/dx-styles.css
@@ -131,6 +131,13 @@ body
     font-size: 7.5pt;
 }
 
+.ms-datagrid .dx-header-row  {
+    color: #222222;
+    font-weight: bold;
+    background-color: lightskyblue;
+}
+
+
 .ms-datagrid .dx-datagrid .dx-row > td , .ms-datagrid  .dx-datagrid-rowsview .dx-texteditor-input{
     /* padding: 1px; */
     padding:1px 4px 1px 4px;
